--- a/client/src/index.html
+++ b/client/src/index.html
@@ -28,9 +28,8 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-include="'app/tpls/public/header.tpl.html'"></div>
-    <div ui-view></div>
-    <div ng-include="'app/tpls/public/footer.tpl.html'"></div>
+    <div ng-include="'app/tpls/public/sidebar.tpl.html'" include-replace></div>
+    <div ng-include="'app/tpls/public/main.tpl.html'" include-replace></div>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
